# Agentic-AI---AgentOS

./: README.md
i222131_AgenticAssignment1/: IMPLEMENTATION_SUMMARY.md  REACT_MULTISTEP_GUIDE.md  assignment_1_agenticai_sp26.txt  clean_trace.jsonl  compare.json  final_test.jsonl  fix.jsonl  multi.jsonl  multi2.jsonl  multi_step_test.jsonl  multistep.jsonl  multistep_test.jsonl  my_trace.jsonl  reasoning_trace.jsonl  repaired.jsonl  single.jsonl  states.jsonl  steps.jsonl  strict_steps.jsonl  t1.jsonl  t2.jsonl  test.jsonl  test_no_hallucination.jsonl  trace.jsonl  trace_improved.jsonl  trace_multi.jsonl
i222131_AgenticAssignment1/agentos8/: README.md  compare.json  pyproject.toml  run_agent.py  trace.jsonl
i222131_AgenticAssignment1/agentos8/agent/: compare.py  config.py  llm.py  logging.py  memory.py  planner.py  prompts.py  protocol.py  react.py  reflect.py  runner.py  safety.py  tools.py  tot.py  utils.py
i222131_AgenticAssignment1/agentos8/agentos8.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
i222131_AgenticAssignment1/agentos8/harness/: tasks_public.json  tools_harness.py
i222131_AgenticAssignment1/agentos8/noise/: 0xDECOY_POLICY.txt  README_NOISE.md  zebra_quantum_ledger.txt
i222131_AgenticAssignment1/agentos8/tests_public/: conftest.py  test_compare_runner_schema.py  test_injection_safety_expectation.py  test_protocol_and_utils.py  test_reflection_repair.py  test_trace_schema.py
