[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos8"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agentos8 = "agent.runner:run_cli"

[tool.setuptools]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests_public"]
addopts = "-q"
